@@ -23,6 +23,7 @@ dillo-2.1
  - Ported the command line interface from dillo1 (XID not working yet).
  - Switched file dpi error messages to HTML.
  - Added a popup menu to form's submit button.
+ - Added a right-click menu to the form submit button (allows to show hiddens).
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
